# pricing_llm

./: .gitignore  README.md  create_project_structure.sh  pyproject.toml  requirements.txt
dynamic_pricing_rl/: __init__.py  merge_lora_gemma4.py  serve_pricing_llm.py  train_grpo.py
dynamic_pricing_rl/core/: __init__.py  elasticity_math.py
dynamic_pricing_rl/envs/: __init__.py  marketplace_env.py
tests/: test_env_vectorization.py
