[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-rl"
version = "0.1.0"
description = "GPU-native dynamic pricing simulator built with PyTorch and TorchRL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hieu Le" }
]
dependencies = [
  "torch",
  "torchrl",
  "tensordict"
]

[project.optional-dependencies]
dev = [
  "pytest"
]
training = [
  "unsloth",
  "vllm",
  "trl==0.24.0",
  "datasets==4.3.0",
  "accelerate==1.13.0",
  "peft==0.19.1",
  "bitsandbytes==0.49.2",
  "transformers==4.57.6"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamic_pricing_rl*"]
