[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-pricing-rl"
version = "0.1.0"
description = "GPU-native dynamic pricing simulator built with PyTorch and TorchRL."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hieu Le" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest"
]
training = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamic_pricing_rl*"]
